# appelemoi

./: .gitignore  Makefile  README.md  pyproject.toml
data/output/: function_calling_results.json
src/: __main__.py  decoder.py  output.py  parser.py  promptbuilder.py  tempCodeRunnerFile.py
